5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1846_1277.log
== SUBMITION (2019-06-25 17:05:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

tempo=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
e=int(input())
s=int(input())
ie=(e%10)-1
iis=(s%10)-1
print(tempo[ie,iis])

-- EXECUTION TIME:
1.07775
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:35:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

tabela=array[[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]]
print(tabela)				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:35:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

tabela=array[[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]]
print(tabela)				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:35:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

tabela=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
print(tabela)				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:41:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

tabela=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
cidade_saida=int(input("cidade_saida: ")
cidade_chegada=int(input("cidade_chegada: "))

indice_linha=(cidade_saida%10)-1
indice_coluna=(cidade_chegada)-1
					  
print(tabela[indice_linha,indice_coluna])				 
-- ERROR:
File "XXXX", line 7
    cidade_chegada=int(input())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:42:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

tabela=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
cidade_saida=int(input("cidade_saida: "))
cidade_chegada=int(input("cidade_chegada: "))

indice_linha=(cidade_saida%10)-1
indice_coluna=(cidade_chegada)-1
					  
print(tabela[indice_linha,indice_coluna])				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:42:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

tabela=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
cidade_saida=int(input("cidade_saida: "))
cidade_chegada=int(input("cidade_chegada: "))

indice_linha=(cidade_saida%10)-1
indice_coluna=(cidade_chegada)-1
					  
print(tabela[indice_linha,indice_coluna])				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:43:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

tabela=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
cidade_saida=int(input("cidade_saida: "))
cidade_chegada=int(input("cidade_chegada: "))

indice_linha=(cidade_saida%10)-1
indice_coluna=(cidade_chegada%10)-1
					  
print(tabela[indice_linha,indice_coluna])				 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:43:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

tabela=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
cidade_saida=int(input("cidade_saida: "))
cidade_chegada=int(input("cidade_chegada: "))

indice_linha=(cidade_saida%10)-1
indice_coluna=(cidade_chegada%10)-1
					  
print(tabela[indice_linha,indice_coluna])				 
-- EXECUTION TIME:
1.10456
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
